2010-09-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15326: htmlArea RTE: W3C Markup Validation issues (Thanks to Jigal van Hemert)

2010-09-12  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15390: sys_action taskcenter create/edit be-user actions do not work (Thanks to Georg Ringer)

2010-09-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15532: Memory leak when using old page cache

2010-09-08  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #13073: options.pageTree.showNavTitle = 1 does not work in typo3/browse_links.php (Thanks to Sebastian Michaelsen)

2010-09-06  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15635: XHTML validity of backend when sys_action is loaded

2010-09-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15562: PHP warning for str_pad() in t3lib_div::cmpIPv4() (Thanks to Markus Klein)

2010-09-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15326: htmlArea RTE: W3C Markup Validation issues

2010-09-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15637: HTML regression in rev 7893
	* Fixed bug #15636: ExtDirect router should throw UnexpectedValueException instead of t3lib_error_exception
	* Fixed bug #15550: t3lib_error_Exception not available in some cases (Thanks to Stefan Galinski)

2010-09-01  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15615: Fix and improve page renderer unit tests (Thanks to Helmut Hummel)

2010-08-31  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15068: htmlArea RTE: Not loading in Firefox 3.0.3

2010-08-30  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14858: imageLinkWrap.JSwindow triggers XSS warning or Fails (Thanks to Jigal van Hemert)

2010-08-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15561: Add information about /dev/urandom to INSTALL.txt

2010-08-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15354: htmlArea RTE: Remove link option not enabled on double-click in Firefox